# InkEcho

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  package-lock.json  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_pen_name.py  0003_alter_user_profile_picture.py
accounts/templates/: landing.html  register.html  writer_profile_creation_form.html
accounts/templates/registration/: login.html
blogs/: forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_options.py
blogs/templates/: login_redirect.html  recent_blogs.html
blogs/templates/blog/: blog_create_form.html  blog_detail.html  blog_list.html
blogs/templates/partial/: comments_list.html  partial_blog_list.html  partial_def.html  search_result.html
inkecho/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: input.css  output.css
theme/static_src/: package-lock.json  tailwind.config.js
theme/static_src/src/: styles.css
