[project]
name = "inkecho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.7.1",
    "django>=6.0.2",
    "django-ckeditor-5>=0.2.19",
    "django-htmx>=1.27.0",
    "django-tailwind>=4.4.2",
    "pillow>=12.1.0",
    "weasyprint>=68.1",
]
